# Sort-pictures

./: .gitignore  pyproject.toml
src/: app.py  handle_path.py  images_path.py  settings.py
test/: test_images_path.py
